fixed mobile timeline z-index

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -34,3 +34,8 @@
 .hero {
     padding-bottom: 3.5rem !important;
 }
+
+
+.header {
+    z-index: 20;
+}
