--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -66,6 +66,7 @@
 }
 
 .swiper-mobile-container {
+  margin-bottom: 4rem;
   .timeline {
     position: relative;
     width: 660px;
@@ -91,8 +92,6 @@
     background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
     background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
     background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-    
-    z-index: 5;
   }
   
   .timeline li {
@@ -163,7 +162,6 @@
     background: #fff;
     border-radius: 10px;
     border: 4px solid rgb(255,80,80);
-    z-index: 10;
   }
   
   .direction-r .flag:before {
@@ -246,7 +244,7 @@
     
     .flag {
       background: hsl(222, 13%, 16%);
-      z-index: 15;
+      z-index: 2;
     }
     
     .direction-l .flag:before,
@@ -262,7 +260,6 @@
       background: hsl(222, 13%, 16%);
       border-radius: 10px;
       border: 2px solid hsl(222, 13%, 16%);
-      z-index: 10;
     }
     
     .direction-l .flag:after,
@@ -292,14 +289,13 @@
       background: hsl(222, 13%, 16%);
       border-radius: 10px;
       border: 2px solid darkorange;
-      z-index: 10;
     }
 
     .time-wrapper {
       display: block;
       position: relative;
       margin: 4px 0 0 0;
-      z-index: 14;
+      z-index: 2;
     }
     
     .direction-l .time-wrapper {
